[gd_scene load_steps=6 format=3 uid="uid://i8pnedvb6ju5"]

[ext_resource type="Script" uid="uid://d0x5svp26o6o6" path="res://scripts/manager.gd" id="1_3vvyu"]
[ext_resource type="Texture2D" uid="uid://umkmlg63oa0w" path="res://assets/IMG_2126.png" id="2_fc4cn"]
[ext_resource type="Texture2D" uid="uid://ckjjlaqaqjtul" path="res://assets/Ciecz.png" id="3_cmilg"]
[ext_resource type="Script" uid="uid://7klkrhhbxe7o" path="res://scenes/mix_color.gd" id="4_fc4cn"]
[ext_resource type="Texture2D" uid="uid://c26aq3edislai" path="res://assets/IMG_2125.png" id="4_mie0y"]

[node name="Mix_table" type="Node2D"]
script = ExtResource("1_3vvyu")

[node name="Cauldron" type="Sprite2D" parent="."]
position = Vector2(2, 165)
texture = ExtResource("2_fc4cn")

[node name="Mix_color" type="Sprite2D" parent="Cauldron"]
position = Vector2(19, -9)
texture = ExtResource("3_cmilg")
script = ExtResource("4_fc4cn")

[node name="Button" type="Button" parent="."]
offset_left = -222.0
offset_top = -703.0
offset_right = -65.0
offset_bottom = -452.0

[node name="Button2" type="Button" parent="."]
offset_left = 9.0
offset_top = -684.0
offset_right = 168.0
offset_bottom = -452.0

[node name="Button3" type="Button" parent="."]
offset_left = -181.0
offset_top = -410.0
offset_right = -17.0
offset_bottom = -169.0

[node name="Button4" type="Button" parent="."]
offset_left = 35.0
offset_top = -403.0
offset_right = 191.0
offset_bottom = -166.0

[node name="mixtures" type="Sprite2D" parent="."]
position = Vector2(-28, -212)
texture = ExtResource("4_mie0y")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(17, -137)
zoom = Vector2(0.5, 0.5)

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
[connection signal="button_down" from="Button2" to="." method="_on_button_2_button_down"]
[connection signal="button_up" from="Button2" to="." method="_on_button_2_button_up"]
[connection signal="button_down" from="Button3" to="." method="_on_button_3_button_down"]
[connection signal="button_up" from="Button3" to="." method="_on_button_3_button_up"]
[connection signal="button_down" from="Button4" to="." method="_on_button_4_button_down"]
[connection signal="button_up" from="Button4" to="." method="_on_button_4_button_up"]
